arm64: zynqmp: Fix binman-sc description (regular expression)
Use .* instead of just *. The last * is causing issue to slre U-Boot
implementation which is stuck for any  unknown reason.

Signed-off-by: Michal Simek <michal.simek@amd.com>

--- a/arch/arm/dts/zynqmp-binman-sc.dts
+++ b/arch/arm/dts/zynqmp-binman-sc.dts
@@ -41,11 +41,11 @@
 						fdt = "fdt-1";
 					};
 					conf-2 {
-						description = "*vek385*";
+						description = ".*vek385.*";
 						fdt = "fdt-2";
 					};
 					conf-3 {
-						description = "*vr-r-a2488-00*";
+						description = ".*vr-r-a2488-00.*";
 						fdt = "fdt-3";
 					};
 				};
