configs: mini: Disable the BINMAN_FDT for mini
The commit 002d0de17610 ("arm64: zynqmp: Add binman description
for SOM") BINMAN_FDT being selected when BINMAN=y that results
in "sf probe" failure. Disable the BINMAN_FDT for mini
configurations.

Signed-off-by: Venkatesh Yadav Abbarapu <venkatesh.abbarapu@amd.com>
Message-ID: <20241128054928.2514788-1-venkatesh.abbarapu@amd.com>

--- a/configs/xilinx_zynqmp_mini_nand_defconfig
+++ b/configs/xilinx_zynqmp_mini_nand_defconfig
@@ -61,6 +61,7 @@ CONFIG_NAND_ARASAN=y
 CONFIG_SYS_NAND_ONFI_DETECTION=y
 CONFIG_SYS_NAND_MAX_CHIPS=2
 CONFIG_ARM_DCC=y
+# CONFIG_BINMAN_FDT is not set
 CONFIG_PANIC_HANG=y
 # CONFIG_GZIP is not set
 # CONFIG_LMB is not set
