arm64: xilinx: add clock-output-names property in clock nodes
Replace underscores with hyphens in the clock node names as per
dt-schema rule.

Also, add clock-output-names property to all clock nodes, so that the
resulting clock name do not change when clock node name is changed.

Signed-off-by: Naman Trivedi <naman.trivedimanojbhai@amd.com>
Acked-by: Senthil Nathan Thangaraj <senthilnathan.thangaraj@amd.com>
Message-ID: <20241128125723.2458921-1-naman.trivedimanojbhai@amd.com>

--- a/arch/arm/dts/versal-net-clk-ccf.dtsi
+++ b/arch/arm/dts/versal-net-clk-ccf.dtsi
@@ -13,11 +13,12 @@
 #include <dt-bindings/reset/xlnx-versal-net-resets.h>
 
 / {
-	ref_clk: ref_clk {
+	ref_clk: ref-clk {
 		bootph-all;
 		compatible = "fixed-clock";
 		#clock-cells = <0>;
 		clock-frequency = <33333333>;
+		clock-output-names = "ref_clk";
 	};
 
 	can0_clk: can0-clk {
@@ -26,6 +27,7 @@
 		clocks = <&versal_net_clk CAN0_REF_2X>;
 		clock-div = <2>;
 		clock-mult = <1>;
+		clock-output-names = "can0_clk";
 	};
 
 	can1_clk: can1-clk {
@@ -34,6 +36,7 @@
 		clocks = <&versal_net_clk CAN1_REF_2X>;
 		clock-div = <2>;
 		clock-mult = <1>;
+		clock-output-names = "can1_clk";
 	};
 
 	firmware {
