--- a/arch/arm/dts/versal-clk.dtsi
+++ b/arch/arm/dts/versal-clk.dtsi
@@ -13,34 +13,38 @@
 #include <dt-bindings/reset/xlnx-versal-resets.h>
 
 / {
-	pl_alt_ref_clk: pl_alt_ref_clk {
+	pl_alt_ref_clk: pl-alt-ref-clk {
 		bootph-all;
 		compatible = "fixed-clock";
 		#clock-cells = <0>;
 		clock-frequency = <33333333>;
+		clock-output-names = "pl_alt_ref_clk";
 	};
 
-	ref_clk: ref_clk {
+	ref_clk: ref-clk {
 		bootph-all;
 		compatible = "fixed-clock";
 		#clock-cells = <0>;
 		clock-frequency = <33333333>;
+		clock-output-names = "ref_clk";
 	};
 
-	can0_clk: can0_clk {
+	can0_clk: can0-clk {
 		#clock-cells = <0>;
 		compatible = "fixed-factor-clock";
 		clocks = <&versal_clk CAN0_REF>;
 		clock-div = <2>;
 		clock-mult = <1>;
+		clock-output-names = "can0_clk";
 	};
 
-	can1_clk: can1_clk {
+	can1_clk: can1-clk {
 		#clock-cells = <0>;
 		compatible = "fixed-factor-clock";
 		clocks = <&versal_clk CAN1_REF>;
 		clock-div = <2>;
 		clock-mult = <1>;
+		clock-output-names = "can1_clk";
 	};
 
 	firmware {
