arm64: versal2: Rename TF-A reserved memory node name
tf-a@ is name which is checked by TF-A that's why align it to have TF-A
work properly.

Signed-off-by: Michal Simek <michal.simek@amd.com>
Message-ID: <e8d9e48f3c39d25c2017d29980d540bce6a7db42.1733221873.git.michal.simek@amd.com>

--- a/arch/arm/dts/versal2-emu-rev0.4-el2.dts
+++ b/arch/arm/dts/versal2-emu-rev0.4-el2.dts
@@ -28,7 +28,7 @@
 		#size-cells = <2>;
 		ranges;
 
-		tfa: memory@10080000 {
+		tfa: tf-a@10080000 {
 			no-map;
 			reg = <0 0x10080000 0 0x50000>;
 		};
