--- a/arch/arm/dts/zynqmp-sc-k24-revA.dts
+++ b/arch/arm/dts/zynqmp-sc-k24-revA.dts
@@ -75,42 +75,44 @@
 
 &gpio {
 	status = "okay";
-	gpio-line-names = "QSPI_CLK", "QSPI_DQ1", "QSPI_DQ2", "QSPI_DQ3", "QSPI_DQ0", /* 0 - 4 */
-			  "QSPI_CS_B", "SPI_CLK", "LED1", "LED2", "SPI_CS_B", /* 5 - 9 */
-			  "SPI_MISO", "SPI_MOSI", "FWUEN", "EMMC_DAT0", "EMMC_DAT1", /* 10 - 14 */
-			  "EMMC_DAT2", "EMMC_DAT3", "EMMC_DAT4", "EMMC_DAT5", "EMMC_DAT6", /* 15 - 19 */
-			  "EMMC_DAT7", "EMMC_CMD", "EMMC_CLK", "EMMC_RST", "I2C1_SCL", /* 20 - 24 */
-			  "I2C1_SDA", "", "", "", "", /* 25 - 29 */
-			  "", "SHUTDOWN", "", "", "PS_PWR_EN", /* 30 - 34 */
-			  "", "UART1_TXD", "UART1_RXD", "DUT_MODE0", "DUT_MODE1", /* 35 - 39 */
-			  "DUT_MODE2", "DUT_MODE3", "MODE0_RDBK", "MODE1_RDBK", "MODE2_RDBK", /* 40 - 44 */
-			  "MODE3_RDBK", "INIT_DONE", "FAN_PWM", "UART_MUXSEL0", "UART_MUXSEL1", /* 45 - 49 */
-			  "MDIO_MDC", "MDIO", "USB_CLK", "USB_DIR", "USB_TXDATA2", /* 50 - 54 */
-			  "USB_NXT", "USB_TXDATA0", "USB_TXDATA1", "USB_STP", "USB_TXDATA3", /* 55 - 59 */
-			  "USB_TXDATA4", "USB_TXDATA5", "USB_TXDATA6", "USB_TXDATA7", "", /* 60 - 64 */
-			  "", "I2C0_SCL", "I2C0_SDA", "I2C0_ALERT", "I2C1_ALERT", /* 65 - 69 */
-			  "UART0_RXD", "UART0_TXD", "", "", "I2C_MUX_RST0", /* 70 - 74 */
-			  "I2C_MUX_RST1", "USB_PHY_RESET_B", "PS_GEM_RESET", /* 75 - 77, MIO end and EMIO start */
-			  "", "", /* 78 - 79 */
-			  "", "", "", "", "", /* 80 - 84 */
-			  "", "", "", "", "", /* 85 - 89 */
-			  "", "", "", "", "", /* 90 - 94 */
-			  "", "", "", "", "", /* 95 - 99 */
-			  "", "", "", "", "", /* 100 - 104 */
-			  "", "", "", "", "", /* 105 - 109 */
-			  "", "", "", "", "", /* 110 - 114 */
-			  "", "", "", "", "", /* 115 - 119 */
-			  "", "", "", "", "", /* 120 - 124 */
-			  "", "", "", "", "", /* 125 - 129 */
-			  "", "", "", "", "", /* 130 - 134 */
-			  "", "", "", "", "", /* 135 - 139 */
-			  "", "", "", "", "", /* 140 - 144 */
-			  "", "", "", "", "", /* 145 - 149 */
-			  "", "", "", "", "", /* 150 - 154 */
-			  "", "", "", "", "", /* 155 - 159 */
-			  "", "", "", "", "", /* 160 - 164 */
-			  "", "", "", "", "", /* 165 - 169 */
-			  "", "", "", ""; /* 170 - 173 */
+	gpio-line-names =
+		/*   0 -   4 */ "QSPI_CLK", "QSPI_DQ1", "QSPI_DQ2", "QSPI_DQ3", "QSPI_DQ0",
+		/*   5 -   9 */ "QSPI_CS_B", "SPI_CLK", "LED1", "LED2", "SPI_CS_B",
+		/*  10 -  14 */ "SPI_MISO", "SPI_MOSI", "FWUEN", "EMMC_DAT0", "EMMC_DAT1",
+		/*  15 -  19 */ "EMMC_DAT2", "EMMC_DAT3", "EMMC_DAT4", "EMMC_DAT5", "EMMC_DAT6",
+		/*  20 -  24 */ "EMMC_DAT7", "EMMC_CMD", "EMMC_CLK", "EMMC_RST", "I2C1_SCL",
+		/*  25 -  29 */ "I2C1_SDA", "SYSCTLR_JTAG_S0", "SYSCTLR_JTAG_S1", "VERSAL_ERROR_OUT_LS", "VERSAL_DONE",
+		/*  30 -  34 */ "SYSCTLR_POR_B_LS", "SHUTDOWN", "FPD_PWR_EN", "PL_PWR_EN", "PS_PWR_EN",
+		/*  35 -  39 */ "PMU_RST", "UART1_TXD", "UART1_RXD", "SYSCTLR_VERSAL_MODE0", "SYSCTLR_VERSAL_MODE1",
+		/*  40 -  44 */ "SYSCTLR_VERSAL_MODE2", "SYSCTLR_VERSAL_MODE3", "SYSCTLR_VERSAL_MODE0_READBACK", "SYSCTLR_VERSAL_MODE1_READBACK", "SYSCTLR_VERSAL_MODE2_READBACK",
+		/*  45 -  49 */ "SYSCTLR_VERSAL_MODE3_READBACK", "SYSCTLR_VERSAL_POR_B_READBACK", "FAN_PWM", "UART_MUXSEL0", "UART_MUXSEL1",
+		/*  50 -  54 */ "GEM_MDC", "GEM_MDIO", "USB0_CLK", "USB0_DIR", "USB0_DATA2",
+		/*  55 -  59 */ "USB0_NXT", "USB0_DATA0", "USB0_DATA1", "USB0_STP", "USB0_DATA3",
+		/*  60 -  64 */ "USB0_DATA4", "USB0_DATA5", "USB0_DATA6", "USB0_DATA7", "",
+		/*  65 -  69 */ "I2C0_SW_SEL", "I2C0_SCL", "I2C0_SDA", "I2C0_ALERT", "I2C1_ALERT",
+		/*  70 -  74 */ "UART0_TXD", "UART0_RXD", "I2C1_SW_INT_B", "I2C0I2C1_SW_INT_BI2C1_SW_INT_B_SW_INT_B", "SYSCTLR_IIC_MUX0_RESET_B",
+		/*  75 -  77 */ "SYSCTLR_IIC_MUX1_RESET_B", "USB_RESET_B", "ETH_RESET_B",
+		/* MIO end and EMIO start */
+		/*  78 -  79 */ "", "",
+		/*  80 -  84 */ "", "", "", "", "",
+		/*  85 -  89 */ "", "", "", "", "",
+		/*  90 -  94 */ "", "", "", "", "",
+		/*  95 -  99 */ "", "", "", "", "",
+		/* 100 - 104 */ "", "", "", "", "",
+		/* 105 - 109 */ "", "", "", "", "",
+		/* 110 - 114 */ "", "", "", "", "",
+		/* 115 - 119 */ "", "", "", "", "",
+		/* 120 - 124 */ "", "", "", "", "",
+		/* 125 - 129 */ "", "", "", "", "",
+		/* 130 - 134 */ "", "", "", "", "",
+		/* 135 - 139 */ "", "", "", "", "",
+		/* 140 - 144 */ "", "", "", "", "",
+		/* 145 - 149 */ "", "", "", "", "",
+		/* 150 - 154 */ "", "", "", "", "",
+		/* 155 - 159 */ "", "", "", "", "",
+		/* 160 - 164 */ "", "", "", "", "",
+		/* 165 - 169 */ "", "", "", "", "",
+		/* 170 - 173 */ "", "", "", "";
 };
 
 &usb0 { /* mio52 - mio63 */
