--- a/arch/arm/dts/versal2.dtsi
+++ b/arch/arm/dts/versal2.dtsi
@@ -442,7 +442,7 @@
 		};
 
 		ospi: spi@f1010000 {
-			compatible = "xlnx,versal-ospi-1.0", "cdns,qspi-nor";
+			compatible = "amd,versal2-ospi", "cdns,qspi-nor";
 			status = "disabled";
 			reg = <0 0xf1010000 0 0x10000>,
 			      <0 0xc0000000 0 0x20000000>;
