arm64: zynqmp: Add eeprom labels for System Controller dts
Label all eeproms so we can open by label rather than a fixed i2c address.

Signed-off-by: Jonathan Stroud <jonathan.stroud@amd.com>
Message-ID: <20241218232302.1595528-1-jonathan.stroud@amd.com>

--- a/arch/arm/dts/zynqmp-sc-k24-revA.dts
+++ b/arch/arm/dts/zynqmp-sc-k24-revA.dts
@@ -62,6 +62,7 @@
 	eeprom_cc: eeprom@54 { /* on CC defined by spec */
 		bootph-all;
 		compatible = "atmel,24c64";
+		label = "eeprom_cc";
 		reg = <0x54>;
 	};
 
